# pick-101

./: .gitignore  README.md  eval.py  eval_cartesian.py  eval_petri_lid_free_dish.py  pyproject.toml  test_ik_grasp.py  test_ik_grasp_video.py  train.py  train_her.py  train_lift.py  train_lift_cartesian.py  train_lift_image.py  train_lift_petri_lid_free_dish.py  visualize_arm_petri.py  visualize_curriculum.py  windows-commands.md  windows_commands.md
configs/: curriculum_stage1.yaml  curriculum_stage3.yaml  default.yaml  drqv2_lift_s3.yaml  drqv2_lift_s3_v13.yaml  drqv2_lift_s3_v15.yaml  drqv2_lift_s3_v16.yaml  grasp_stage1_close.yaml  grasp_stage2_close.yaml  grasp_stage2_small_lift.yaml  grasp_stage3_full_lift.yaml  grasp_stage4_full_task.yaml  lift_500k.yaml  lift_curriculum_s1.yaml  lift_curriculum_s1_v7.yaml  lift_image.yaml  lift_petri_lid_free_dish_500k.yaml  lift_petri_lid_free_dish_s3.yaml
docs/: 004_top-down-grasp-configuration.md
envs/: lift_cube.py  lift_cube_cartesian.py  pick_cube.py
models/so101/: lift_cube.xml  lift_cube_horizontal.xml  lift_cube_ik_grasp.xml  lift_petri_lid.xml  lift_petri_lid_free_dish.xml  so101_horizontal_grasp.xml  so101_ik_grasp.xml  so101_new_calib.xml  so101_wide_gripper.xml  temp_petri_viz.xml
models/so101/assets/: petri_dish.STL  petri_dish_lid.STL
poster/: build_pdf.sh  poster.html
scripts/: collect_scripted_grasps.py  test_wrist_camera.py  visualize_camera.py
src/callbacks/: plot_callback.py
src/controllers/: ik_controller.py
src/envs/: __init__.py  lift_cube.py  lift_cube_cartesian.py  lift_petri_lid.py  lift_petri_lid_free_dish.py  pick_cube.py  pick_cube_goal.py
src/envs/wrappers/: __init__.py  image_obs.py
src/training/: __init__.py  config_loader.py  eval_checkpoint.py  sb3_style_logger.py  so101_factory.py  train_image_rl.py  workspace.py
src/training/cfgs/: so101_lift.yaml
tests/: test_fingertip_vertices.py  test_grasp_frames.py  test_horizontal_grasp.py  test_ik_controller.py  test_ik_grasp.py  test_ik_grasp_headless.py  test_ik_grasp_video.py  test_ik_side_grasp.py  test_topdown_pick.py  test_topdown_pick_lid.py  test_topdown_pick_lid_free_dish.py  test_topdown_pick_lid_free_dish_video.py  test_topdown_pick_lid_video.py  test_topdown_pick_video.py  test_wrist_camera.py
