[project]
name = "explore-mujoco"
version = "0.1.0"
description = "RL experiments with SO-101 arm in MuJoCo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "torchaudio>=2.8.0",
    "pytorch-triton-rocm>=3.2.0",
    "mujoco>=3.0.0",
    "gymnasium[mujoco]>=1.0.0",
    "stable-baselines3>=2.0.0",
    "imageio[ffmpeg]>=2.30.0",
    "tensorboard>=2.14.0",
    "tqdm>=4.65.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.3",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-rocm" },
]
torchvision = [
    { index = "pytorch-rocm" },
]
torchaudio = [
    { index = "pytorch-rocm" },
]
pytorch-triton-rocm = [
    { index = "pytorch-rocm" },
]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.4"
explicit = true
